Fix to "Changing navbar to fixed top causes overlap with top logo area" https://github.com/XGenerationNetwork/dzl/issues/1
Removal of legacy "navbar-brand" code

--- a/common.less
+++ b/common.less
@@ -1,6 +1,9 @@
+@import '../../libraries/bootstrap/less/variables.less';
+
 body.navbar-is-fixed-top {
   &, &.admin-menu {
     padding-top: 0 !important;
+	margin-top: 51px !important;
   }
   &.toolbar {
     padding-top: 6.4rem !important;
@@ -20,15 +23,12 @@ div.links {
   margin-left: 0;
 }
 
-.navbar-brand {
-  img {
-    float: left;
-    height: 3.2rem;
-    width: auto;
-    margin: -0.6rem 1rem 0 0;
-  }
-}
-
 .hljs {
   background: transparent !important;
+}
+
+.jumbotron {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
